# home-lab

./: .gitignore  Cargo.toml  LICENSE  README.md  knock.Dockerfile  run.sh
config/: manual-setup.sh  mount-backup-1.sh  mount-protected.sh  protected.target  umount-backup-1.sh
config/authelia/: authelia-redis.container  authelia.container  authelia.service  authelia.service-old  compose.yml  configuration.yml
config/authelia/redis/: authelia-redis.container  authelia_redis.service  compose.yml
config/backup/: backup.service  backup.timer
config/caddy/: Caddyfile  README.md  caddy.container  caddy.socket
config/forgejo/: forgejo-db.container  forgejo.container
config/gotify/: gotify.container
config/jellyfin/: jellyfin.container
config/knock/: knock.container  unlock-api.service
config/lindy/: Caddyfile  lindy.container
config/lldap/: compose.yml  lldap.container  lldap.service
config/monitoring/: alertmanager.container  alertmanager.template.yml  grafana.container  node-exporter.container  prometheus.container  prometheus.yml
config/monitoring/prometheus/: alerts-backup.yml  alerts-node.yml  alerts-prometheus.yml  prometheus.yml
config/nextcloud/: .gitignore  README.md  nextcloud.network  preview-pregenerate.service  preview-pregenerate.timer  vars.conf
config/prometheus/: node-exporter.container  prometheus.container  prometheus.yml
config/sudo-scripts/: README.md  mount-backup-1.sh  mount-backup-2.sh  mount-protected.sh  umount-backup-1.sh  umount-backup-2.sh  update-packages.sh  update-system-packages-for-security.sh  update-system-packages.sh
config/updates/: update-images.service  update-images.timer  update-packages.service  update-packages.timer  update-podman-images.service  update-podman-images.timer  update-security-packages.service  update-security-packages.timer  update-system-packages-for-security.service  update-system-packages-for-security.timer  update-system-packages.service  update-system-packages.timer
home-lab/: Cargo.toml
home-lab/src/: error.rs  list_files.rs  main.rs  notifications.rs
home-lab/src/scripts/: backup.rs  compile_nextcloud_units.rs  install_units.rs  mod.rs  run_unlock_api.rs  update.rs
home-lab/src/scripts/backup/: backup_disk.rs  check_files.rs  do_backup.rs  list_services.rs  start_service_on_drop.rs  start_services_on_drop.rs
home-lab/src/scripts/compile_nextcloud_units/: compose_schema.rs  quadlet_schema.rs
home-lab/src/scripts/run_unlock_api/: web_error.rs
knock/: Cargo.toml  README.md  default.env
knock/src/: alive_timer.rs  audit.rs  ban_timer.rs  common.rs  config.rs  data.rs  file_appender.rs  forward_auth.rs  i18n.rs  login.rs  macros.rs  main.rs  network.rs  parse_duration.rs  persistence.rs  serialize_to_string.rs  string_hash.rs  template_renderer.rs  terminate.rs  throttle.rs  unlock_api.rs
knock/src/data/: map.rs
knock/src/servers/: forward_auth.rs  login.rs  mod.rs  portal.rs
knock/src/servers/forward_auth/: access_level.rs  log.rs  logger.rs  request_info.rs
knock/web/: languages.json  login.html  login.html.j2  portal.html  portal.html.j2
knock/web/static/: portal.js  style.css
scripts/: Cargo.toml
scripts/src/: home.rs  list_files.rs  main.rs
scripts/src/scripts/: compile_nextcloud_units.rs  copy_deleted_films.rs  detect_films.rs  generate_totp_secret.rs  match_deleted_films.rs  merge_contacts.rs  mod.rs  move_films.rs
scripts/src/scripts/compile_nextcloud_units/: quadlet_schema.rs
src/: child.rs  command.rs  list_files.rs  main.rs  mount.rs
src/scripts/: backup.rs  compile_next_cloud_units.rs  compile_nextcloud_units.rs  detect_duplicates.rs  detect_films.rs  hash_files.rs  install_sudo_scripts.rs  install_user_units.rs  mod.rs  monitor_host.rs  patch_takeout_exif.rs  prepare_rename_files.rs  rename_files.rs  unlock.rs
src/scripts/compile_next_cloud_units/: compose_schema.rs  environment_encoder.rs  path_from_home.rs  quadlet_schema.rs
src/scripts/compile_nextcloud_units/: environment_encoder.rs  quadlet_schema.rs
