[package]
name = "home-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
itertools = "0.14.0"
sha1 = "0.10.6"
tokio = "1.44.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
hex = "0.4.3"
serde_yml = "0.0.12"
regex = "1.11.1"
dotenvy = "0.15.7"
rayon = "1.10.0"
parking_lot = "0.12.3"
