[package]
name = "home-lab"
version = "0.1.0"
edition = "2024"
default-run = "home-lab"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.4"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
dotenvy = "0.15.7"
itertools = "0.14.0"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
sha1 = "0.10.6"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints.clippy]
uninlined_format_args = "allow"