[package]
name = "knock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
totp-rs = "5.7.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
getrandom = "0.3.3"
hex = "0.4.3"
time = "0.3.41"
