[package]
name = "scripts"
version = "0.1.0"
edition = "2024"
default-run = "scripts"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
csv = "1.3.1"
dotenvy = "0.15.7"
hex = "0.4.3"
itertools = "0.14.0"
parking_lot = "0.12.3"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
sha1 = "0.10.6"
stringmetrics = "2.2.2"
totp-rs = { version = "5.7.0", features = ["gen_secret"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
